# Mimir

./: .eval_checksum  .gitignore  .pre-commit-config.yaml  README.md  prefect.yaml  pyproject.toml  watch.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_constraint_process_decision.py  0003_add_queue_saturation_audit.py  0004_add_source_versions.py
config/: source_priority.yaml
eval/: frozen_questions.yaml
flows/: ground.py  ingest.py  normalize.py  retract.py
src/mimir/: __init__.py
src/mimir/adapters/: __init__.py  base.py  code_analysis.py  confluence.py  github.py  interview.py  pii.py  slack.py  version_store.py
src/mimir/authority/: __init__.py  conflicts.py  ranking.py  resolver.py
src/mimir/complexity/: __init__.py  metrics.py
src/mimir/crawler/: __init__.py  context.py  extractor.py  llm.py  pipeline.py  prompts.py
src/mimir/cynefin/: __init__.py  classifier.py  domain.py  subdomain.py
src/mimir/eval/: __init__.py  harness.py
src/mimir/grounder/: cache.py  (+3 more)
tests/: conftest.py
tests/integration/: test_sample_chunks_end_to_end.py
tests/phase0/: test_scaffolding.py
tests/phase1/: test_iri.py  test_models.py  test_shacl.py  test_vocabulary.py
tests/phase10/: test_confidence_decay.py  test_retraction.py  test_temporal.py
tests/phase11/: test_permissions.py
tests/phase12/: test_mcp_tools.py  test_mcp_tools_new.py
tests/phase13/: test_normalization.py
tests/phase14/: test_observability.py  test_saturation.py
tests/phase15/: test_eval.py  test_eval_context.py
tests/phase2/: test_concurrency.py  test_connection.py  test_constraint_repository.py  test_decision_repository.py  test_entity_repository.py  test_graph_projection.py  test_graph_version.py  test_migration.py  test_new_tables.py  test_observation_repository.py  test_process_repository.py  test_property_repository.py  test_relationship_repository.py  test_schema.py
tests/phase3/: test_candidates.py  test_embedder.py  test_merger.py  test_resolution_queue.py
tests/phase4/: test_code_analysis.py  test_confluence.py  test_confluence_update.py  test_github.py  test_github_update.py  test_interview.py  test_pii.py  test_slack.py  test_version_store.py
tests/phase5/: test_context.py  test_extractor.py  test_llm.py  test_pipeline.py  test_prompt_regression.py
tests/phase6/: test_authority.py
tests/phase7/: test_cynefin.py  test_cynefin_subdomain.py
tests/phase8/: test_complexity.py  test_observability_dimensions.py
tests/phase9/: test_grounder.py  test_grounder_cache.py  test_grounder_recursive.py
(+34 files in other folders)
